plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.bm.service.education'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'

	implementation 'org.springframework.boot:spring-boot-starter-flyway'

	implementation 'org.flywaydb:flyway-core:11.19.1'

	implementation 'org.flywaydb:flyway-database-postgresql:11.19.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'

	implementation "jakarta.validation:jakarta.validation-api"

	compileOnly "jakarta.servlet:jakarta.servlet-api:6.1.0"

	implementation "org.mapstruct:mapstruct:1.6.3"

	annotationProcessor "org.mapstruct:mapstruct-processor:1.6.3"

	implementation "io.jsonwebtoken:jjwt-api:0.13.0"

	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.13.0"

	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.13.0"

	implementation 'org.hibernate.orm:hibernate-envers'

	annotationProcessor 'org.hibernate.orm:hibernate-envers'

	compileOnly 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

	runtimeOnly 'org.postgresql:postgresql'

	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'

	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"

	testImplementation "org.testcontainers:testcontainers:2.0.2"

	testImplementation "org.testcontainers:testcontainers-junit-jupiter:2.0.2"
}

tasks.named('test') {
	useJUnitPlatform()
}
